Scoped Package added
Added a scoped package name, to prevent malicious publication to NPM which would be picked up by someone using this sample.

--- a/vanilla-js/package.json
+++ b/vanilla-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uber-direct-js-sdk-examples",
+  "name": "@uber/uber-direct-js-sdk-examples",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
